# agentic-ai-AgentCore-simple-agent

./: README.md  main.py  pyproject.toml
